--- a/gleam.toml
+++ b/gleam.toml
@@ -9,6 +9,7 @@ gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 gladvent = ">= 2.2.1 and < 3.0.0"
 gleam_community_maths = ">= 2.0.0 and < 3.0.0"
 gleamy_structures = ">= 1.2.0 and < 2.0.0"
+gleam_yielder = ">= 1.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
@@ -26,3 +27,4 @@ gleeunit = ">= 1.0.0 and < 2.0.0"
 7 = { pt_1 = 1499, pt_2 = 24743903847942 }
 8 = { pt_1 = 140008, pt_2 = 9253260633 }
 9 = { pt_1 = 4771532800, pt_2 = 1544362560 }
+10 = { pt_1 = 444 }
