--- a/gleam.toml
+++ b/gleam.toml
@@ -12,6 +12,7 @@ gleamy_structures = ">= 1.2.0 and < 2.0.0"
 gleam_yielder = ">= 1.1.0 and < 2.0.0"
 shellout = ">= 1.7.0 and < 2.0.0"
 simplifile = ">= 2.3.1 and < 3.0.0"
+temporary = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
